generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "./dbml/schema.dbml"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum SystemRole {
  USER
  SUPER_ADMIN
}

enum ProjectRole {
  OWNER
  ADMIN
  MEMBER
}

enum InviteStatus {
  PENDING
  ACCEPTED
  REJECTED
}

enum TransactionStatus {
  PENDING
  SUCCESS
  FAILED
}

enum AuthProvider {
  LOCAL
  GOOGLE
}

model User {
  id                   String           @id @default(cuid())
  username             String           @unique
  fullName             String
  avatarUrl            String?
  avatarPublicId       String?
  email                String           @unique
  password             String?
  provider             AuthProvider     @default(LOCAL)
  googleId             String?          @unique
  resetPasswordToken   String?
  resetPasswordExpires DateTime?
  role                 SystemRole       @default(USER)
  isPremium            Boolean          @default(false)
  premiumExpiresAt     DateTime?
  createdAt            DateTime         @default(now())
  memberships          ProjectMember[]
  ownedProjects        Project[]        @relation("ProjectOwner")
  invitation           Invitation[]
  notifitcation        Notification[]
  taskAssignees        TaskAssignee[]
  activityLogs         ActivityLog[]

  commentmentions      CommentMention[]
  comments             Comment[]
  transactions         Transaction[]
}

model Project {
  id          String          @id @default(cuid())
  name        String
  description String?
  summary     String?
  created_at  DateTime        @default(now())
  updated_at  DateTime        @updatedAt
  ownerId     String
  owner       User            @relation("ProjectOwner", fields: [ownerId], references: [id], onDelete: Cascade)
  members     ProjectMember[]
  tasks       Task[]
  columns     Column[]
  invitation  Invitation[]
  activity    ActivityLog[]

  @@index([ownerId])
}

model ProjectMember {
  id        String      @id @default(cuid())
  projectId String
  userId    String
  role      ProjectRole @default(MEMBER)
  joinedAt  DateTime    @default(now())
  project   Project     @relation(fields: [projectId], references: [id], onDelete: Cascade)
  user      User        @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([projectId, userId])
  @@index([userId])
  @@index([projectId])
}

model Column {
  id        String   @id @default(cuid())
  title     String
  position  Float
  closed    Boolean  @default(false)
  projectId String
  project   Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
  tasks     Task[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([projectId])
  @@index([projectId, position])
}

model Task {
  id           String         @id @default(cuid())
  title        String
  description  String?
  position     Float
  dueDate      DateTime?
  projectId    String
  project      Project        @relation(fields: [projectId], references: [id], onDelete: Cascade)
  columnId     String
  column       Column         @relation(fields: [columnId], references: [id], onDelete: Cascade)
  assignees    TaskAssignee[]
  comments     Comment[]

  created_at   DateTime       @default(now())
  updated_at   DateTime       @updatedAt
  completedAt  DateTime?

  estimateHours Int?
  difficulty    Int?
  blocked       Boolean     @default(false)
  blocks        TaskBlock[]

  dependencies TaskDependency[] @relation("TaskDeps")
  blockedBy    TaskDependency[] @relation("TaskBlockedBy")

  @@index([columnId, position])
  @@index([projectId])
}

model TaskDependency {
  id              String @id @default(cuid())
  taskId          String
  dependsOnTaskId String

  task            Task @relation("TaskDeps", fields: [taskId], references: [id], onDelete: Cascade)
  dependsOn       Task @relation("TaskBlockedBy", fields: [dependsOnTaskId], references: [id], onDelete: Cascade)

  createdAt       DateTime @default(now())

  @@unique([taskId, dependsOnTaskId])
  @@index([taskId])
  @@index([dependsOnTaskId])
}

model TaskBlock {
  id          String    @id @default(cuid())
  taskId      String
  task        Task      @relation(fields: [taskId], references: [id], onDelete: Cascade)
  reason      String
  blockedAt   DateTime  @default(now())
  unblockedAt DateTime?

  @@index([taskId])
}

model TaskAssignee {
  taskId String
  userId String
  task   Task   @relation(fields: [taskId], references: [id], onDelete: Cascade)
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([taskId, userId])
}

model Invitation {
  id        String       @id @default(cuid())
  email     String
  token     String       @unique
  projectId String
  inviterId String
  role      ProjectRole  @default(MEMBER)
  status    InviteStatus @default(PENDING)
  createdAt DateTime     @default(now())
  expiresAt DateTime
  project   Project      @relation(fields: [projectId], references: [id], onDelete: Cascade)
  inviter   User         @relation(fields: [inviterId], references: [id], onDelete: Cascade)

  @@index([projectId])
  @@index([inviterId])
  @@index([email])
}

model Notification {
  id        String   @id @default(cuid())
  userId    String
  type      String
  data      Json?
  read      Boolean  @default(false)
  createdAt DateTime @default(now())
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, read])
}

//DATN
model Comment {
  id       String @id @default(cuid())
  content  String
  taskId   String
  authorId String

  parentId String?
  parent   Comment?         @relation("CommentThread", fields: [parentId], references: [id], onDelete: Cascade)
  replies  Comment[]        @relation("CommentThread")
  mentions CommentMention[]

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  task   Task @relation(fields: [taskId], references: [id], onDelete: Cascade)
  author User @relation(fields: [authorId], references: [id], onDelete: Cascade)

  @@index([taskId])
  @@index([authorId])
  @@index([parentId])
}

model CommentMention {
  commentId String
  userId    String

  comment Comment @relation(fields: [commentId], references: [id], onDelete: Cascade)
  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([commentId, userId])
  @@index([userId])
}

model ActivityLog {
  id         String   @id @default(cuid())
  userId     String
  projectId  String
  entityId   String
  entityType String
  action     String
  metadata   Json?
  createdAt  DateTime @default(now())

  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  project Project @relation(fields: [projectId], references: [id], onDelete: Cascade)

  @@index([projectId])
  @@index([entityId])
}

model Transaction {
  id          String            @id @default(cuid())
  userId      String
  user        User              @relation(fields: [userId], references: [id], onDelete: Cascade)
  amount      Int
  orderId     String            @unique
  requestId   String
  momoTransId String?
  status      TransactionStatus @default(PENDING)
  createdAt   DateTime          @default(now())
  updatedAt   DateTime          @updatedAt

  @@index([userId])
}

